Исправление ошибок за 03.02 (только задачи)