@@ -1,33 +1,38 @@
 package ru.StreamApi.Laba4;
 
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Comparator;
+import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class Laba4Ex24Stream {
     //Определить, можно ли, переставив члены данной последовательности, получить геометрическую прогрессию.
+
+
     @Test
     void test() {
-        assertTrue(determinesWhetherItIsPossibleGetGeometricProgressionFromNumbersInArray(Arrays.asList(1,3,2,4,6,5,7,8)));
-        assertFalse(determinesWhetherItIsPossibleGetGeometricProgressionFromNumbersInArray(Arrays.asList(1,1,1,1)));
-        assertFalse(determinesWhetherItIsPossibleGetGeometricProgressionFromNumbersInArray(Arrays.asList(1,7,3,2)));
-        assertTrue(determinesWhetherItIsPossibleGetGeometricProgressionFromNumbersInArray(Arrays.asList(2,6,8,4,12,10,14,16)));
-        assertFalse(determinesWhetherItIsPossibleGetGeometricProgressionFromNumbersInArray(List.of()));
+        assertTrue(determinesPresenceArithmeticProgression(List.of(2, 4, 8, 32, 16)));
+        assertFalse(determinesPresenceArithmeticProgression(List.of(3, 12, 35, 7)));
+        assertFalse(determinesPresenceArithmeticProgression(List.of(9, 3, 12, 6, 15, 16)));
+        assertTrue(determinesPresenceArithmeticProgression(List.of(4, 1, 64, 16)));
+        assertTrue(determinesPresenceArithmeticProgression(List.of(9, 27, 3, 81)));
+        assertFalse(determinesPresenceArithmeticProgression(List.of()));
     }
 
-    public boolean determinesWhetherItIsPossibleGetGeometricProgressionFromNumbersInArray(List<Integer> listNumber) {
-        List<Integer> listForAnswer = new ArrayList<>(listNumber.stream().toList());
-        if(listForAnswer.isEmpty()) return false;
-        listForAnswer.sort(Comparator.naturalOrder());
+    private boolean determinesPresenceArithmeticProgression(List<Integer> listNumber) {
+        List<Integer> list1 = listNumber.stream().
+                sorted(Comparator.reverseOrder()).
+                toList();
+        if (list1.isEmpty()) return false;
+        int diff = list1.get(0) / list1.get(1);
 
-        int diff = listForAnswer.get(1) - listForAnswer.get(0);
-//        return listNumber.stream().map((o1, o2) -> o1 - o2).allMatch((o1, o2) -> diff.equals(o1.) ? 0 : 1);
-        for (int i = 1; i < listForAnswer.size(); i++) {
-            if (listForAnswer.get(i) - listForAnswer.get(i-1) != diff ||
-                    listForAnswer.get(i).equals(listForAnswer.get(i - 1))) {
+        for (int i = 1; i < list1.size(); i++) {
+            if (list1.get(i - 1) / list1.get(i) != diff) {
                 return false;
             }
         }
