@@ -2,12 +2,11 @@ package ru.StreamApi.Laba4;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Stream;
 
-import static org.junit.jupiter.api.Assertions.assertArrayEquals;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class Laba4Ex4Stream {
@@ -18,22 +17,24 @@ public class Laba4Ex4Stream {
     @Test
     void test() {
         assertEquals(List.of(-7, -9, 2, 3, 4, 5, 6),
-                sortNegativeDescendingOrderAndPositiveAscendingOrder(Arrays.asList(3, -9, 5, -7, 2, 4, 6)));
+                sortNegativeDescendingOrderAndPositiveAscendingOrder(List.of(3, -9, 5, -7, 2, 4, 6)));
         assertEquals(List.of(-9, 2, 3, 4, 6, 7),
-                sortNegativeDescendingOrderAndPositiveAscendingOrder(Arrays.asList(-9, 3, 7, 6, 4, 2)));
+                sortNegativeDescendingOrderAndPositiveAscendingOrder(List.of(-9, 3, 7, 6, 4, 2)));
         assertEquals(List.of(-3, -4, -6, -7, -9, 2),
-                sortNegativeDescendingOrderAndPositiveAscendingOrder(Arrays.asList(-9, -3, -7, -6, -4, 2)));
+                sortNegativeDescendingOrderAndPositiveAscendingOrder(List.of(-9, -3, -7, -6, -4, 2)));
         assertEquals(List.of(2, 3, 4, 6, 7, 9),
-                sortNegativeDescendingOrderAndPositiveAscendingOrder(Arrays.asList(9, 3, 7, 6, 4, 2)));
+                sortNegativeDescendingOrderAndPositiveAscendingOrder(List.of(9, 3, 7, 6, 4, 2)));
         assertEquals(List.of(-6, -7, -8, -9, 1, 2, 3, 4, 5),
-                sortNegativeDescendingOrderAndPositiveAscendingOrder(Arrays.asList(1, -8, 4, -6, 5, -9, 3, 2, -7)));
+                sortNegativeDescendingOrderAndPositiveAscendingOrder(List.of(1, -8, 4, -6, 5, -9, 3, 2, -7)));
     }
 
     private List<Integer> sortNegativeDescendingOrderAndPositiveAscendingOrder(List<Integer> listNumber) {
-        ArrayList<Integer> listAnswer = new ArrayList<>();
-        listNumber.stream().filter(i -> i < 0).sorted(Comparator.reverseOrder()).forEach(listAnswer::add);
-        listNumber.stream().filter(i -> i >= 0).sorted(Comparator.naturalOrder()).forEach(listAnswer::add);
-
-        return listAnswer;
+        return Stream.concat(listNumber.stream()
+                                .filter(i -> i < 0)
+                                .sorted(Comparator.reverseOrder()),
+                        listNumber.stream()
+                                .filter(i -> i >= 0)
+                                .sorted(Comparator.naturalOrder()))
+                .toList();
     }
 }
