@@ -6,34 +6,36 @@ import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
 
-
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class Laba4Ex6Stream {
     //Определить, можно ли, переставив члены данной целочисленной последовательности, получить арифметическую прогрессию.
-    private static final String NEGATIVE = "НЕТ";
-    private static final String POSITIVE = "ДА";
+    // Геометрическая - В сколько-то раз
 
     @Test
     void test() {
-        assertTrue(determinesPresenceArithmeticProgression(Arrays.asList(9, 3, 12, 6, 15)));
-        assertFalse(determinesPresenceArithmeticProgression(Arrays.asList(9, 3, 7, 6, 4, 2)));
-        assertFalse(determinesPresenceArithmeticProgression(Arrays.asList(9, 3, 12, 6, 15, 16)));
-        assertTrue(determinesPresenceArithmeticProgression(Arrays.asList(3, 6, 9, 12, 15)));
-        assertFalse(determinesPresenceArithmeticProgression(Arrays.asList(1, 2, 3, 4, 15)));
+        assertTrue(determinesWhetherItIsPossibleGetGeometricProgressionFromNumbersInArray(List.of(1, 3, 2, 4, 6, 5, 7, 8)));
+        assertFalse(determinesWhetherItIsPossibleGetGeometricProgressionFromNumbersInArray(List.of(1, 1, 1, 1)));
+        assertFalse(determinesWhetherItIsPossibleGetGeometricProgressionFromNumbersInArray(List.of(1, 7, 3, 2)));
+        assertTrue(determinesWhetherItIsPossibleGetGeometricProgressionFromNumbersInArray(List.of(2, 6, 8, 4, 12, 10, 14, 16)));
+        assertFalse(determinesWhetherItIsPossibleGetGeometricProgressionFromNumbersInArray(List.of()));
     }
 
-    private boolean determinesPresenceArithmeticProgression(List<Integer> listNumber) {
-        List<Integer> list1 = listNumber.stream().sorted(Comparator.reverseOrder()).toList();
-        int diff = list1.get(0) - list1.get(1);
-        //list1.stream().filter(i, j -> i - j == diff)
+    public boolean determinesWhetherItIsPossibleGetGeometricProgressionFromNumbersInArray(List<Integer> listNumber) {
+        List<Integer> listForAnswer = listNumber.stream().
+                sorted(Comparator.reverseOrder()).
+                toList();
+        if (listForAnswer.isEmpty()) return false;
 
-        for (int i = 1; i < list1.size(); i++) {
-            if (list1.get(i - 1) - list1.get(i) != diff) {
+        int diff = listForAnswer.get(1) - listForAnswer.get(0);
+//        return listNumber.stream().map((o1, o2) -> o1 - o2).allMatch((o1, o2) -> diff.equals(o1.) ? 0 : 1);
+        for (int i = 1; i < listForAnswer.size(); i++) {
+            if (listForAnswer.get(i) - listForAnswer.get(i - 1) != diff ||
+                    listForAnswer.get(i).equals(listForAnswer.get(i - 1))) {
                 return false;
             }
         }
-    return true;
+        return true;
     }
 }
